src/snapshots/afrotd__parser__tests__interpretation_7.3.8_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 8
index: 5
text: "Bevor der Ball geworfen wird, bewegt sich der Wide Receiver\nA88 vier Meter downfield, direkt vor und auf den Defender B1 zu. An\ndiesem Punkt wird A88 von B1 weggedrückt, worauf dieser seine Hände\nbenutzt, um B1 zu berühren."
ruling: "Team A-Foul. Offense Passbehinderung, wenn der legale Vorwärtspass die neutrale Zone überquert.\nStrafe – 15 Meter vom Previous Spot."
