src/snapshots/afrotd__parser__tests__interpretation_7.3.8_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 8
index: 6
text: "Bevor der Ball geworfen wird, läuft Wide Receiver A88 schräg\nnach innen, wo der Linebacker B1 versucht, ihn zu blocken. A88 benutzt seine Hände, um B1 wegzuschieben."
ruling: "Team A-Foul.\nOffense Passbehinderung, wenn der legale Vorwärtspass die neutrale\nZone überquert. Wenn B1 seinen ursprünglichen Kontakt jenseits der\nneutralen Zone unterhalb der Gürtellinie angesetzt hatte, hat Team B\nauch gefoult und die Live Ball Fouls heben sich auf."
