src/snapshots/afrotd__parser__tests__interpretation_7.3.8_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 8
index: 7
text: "A88, ein berechtigter Receiver, läuft eine 10-Meter-Route und\nbiegt in einem 90 Grad-Winkel in Richtung Seitenlinie. Nachdem der\nBall geworfen wurde, erreicht ihn B2 und tackelt oder blockt ihn oder ergreift oder zieht ihn, bevor A88 den Ball, einen fangbaren Vorwärtspass,\nberührt."
ruling: "Team B-Foul. Defense Passbehinderung. Strafe –\nSpot of Foul und First Down."
