src/snapshots/afrotd__parser__tests__interpretation_7.3.8_8.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 8
index: 8
text: "A80, ein Tight End, läuft 10 Meter bis in Team B’s Backfield\nund biegt danach in Richtung des Torpfostens ab. B1 befindet sich\neinen Schritt hinter und außerhalb von A80, als er ihn erreicht. Nachdem der legale Vorwärtspass geworfen wurde, wird A80 von B1 getackelt oder geblockt, ergriffen oder gezogen, als der Ball über A80’s ausgestreckte Hände fliegt."
ruling: "Team B-Foul. Defense Passbehinderung. Strafe – First Down am Spot of Foul, wenn das Foul sich weniger als 15 Meter vom Previous Spot entfernt ereignet hat. 15-Meterstrafe\nvom Previous Spot und First Down, wenn sich das Foul mehr als 15 Meter jenseits der neutralen Zone ereignet hat."
