src/snapshots/afrotd__parser__tests__interpretation_7.3.8_9.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 8
index: 9
text: "A88 und B2 laufen dicht nebeneinander her, bevor der Ball geworfen wird. Einer von beiden oder beide fallen, als sich ihre Füße berühren und verheddern. Keiner der beiden stellte dem anderen absichtlich ein Bein."
ruling: Kein Foul.
