src/snapshots/afrotd__parser__tests__interpretation_7.3.9_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 9
index: 1
text: "Ein legaler Vorwärtspass wird jenseits der neutralen Zone von einem berechtigten Spieler eines Teams berührt oder gemufft oder streift\neinen Schiedsrichter. Danach, während der Ball weiterhin fliegt, hält\nein Spieler von Team A oder Team B einen berechtigten Gegner, der\nsich jenseits der neutralen Zone befindet."
ruling: "Regeln bezüglich Passbehinderung gelten nicht, nachdem der Pass berührt wurde.\nWird als Foul während eines freien Balles geahndet. Strafe – 10 vom\nPrevious Spot."
