src/snapshots/afrotd__parser__tests__interpretation_8.2.1_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 2
  - 1
index: 2
text: "Ballträger A1, der im Spielfeld läuft, springt und befindet sich an\nder B-2 in der Luft. Er berührt den Boden zuerst drei Meter jenseits der\nGoalline im Aus. Der Ball im Besitz des Spielers überquert einen Pylon."
ruling: Touchdown (Regeln 4.2.4.d und 5.1.3.a).
